Fix padding and header alignment

--- a/1MinutePost/ClientApp/src/app/post/post.component.css
+++ b/1MinutePost/ClientApp/src/app/post/post.component.css
@@ -6,6 +6,7 @@
   border-radius: 10px;
   display: flex;
   flex-direction: column;
+  padding: 16px;
 }
 .mat-card-header {
   flex-shrink: 0;
